Changed file type for images, in hopes this will solve the visibility issue on github's deployed pages.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ html {
 /* Background color of webpage set. */
 body {
     background-color: rgb(246, 249, 252);
-    background-image: url("/assets/images/MarvelBackground.png");
+    background-image: url("/assets/images/MarvelBackground.JPG");
     }
 
 header {
